# ros2-systemd-orchestrator

./: .gitignore  README.md  install.sh
services/: corebot_core_bridge.service  corebot_hardware.service  corebot_nav.service  corebot_slam.service  corebot_supervisor_node.service
src/corebot_interfaces/: CMakeLists.txt  package.xml
src/corebot_interfaces/action/: SetMode.action
src/corebot_manager/: CMakeLists.txt  package.xml
src/corebot_manager/src/: supervisor_node.cpp
src/cyber_robot/: CMakeLists.txt  package.xml
src/cyber_robot/config/: cyber_truck.rviz  joint_names_cyber_robt.yaml
src/cyber_robot/launch/: gazebo.launch.py  ign.launch.py
src/cyber_robot/meshes/: U_B.STL  U_F.STL  U_L.STL  U_R.STL  W_B_L.STL  W_B_R.STL  W_F_L.STL  W_F_R.STL  base_link.STL
src/cyber_robot/urdf/: classic_plugins.xacro  cyber_robot.csv  cyber_robot.urdf.xacro  cyber_robot_base.urdf.xacro  cyber_robot_ign.urdf  ignition_plugins.xacro
src/cyber_robot/worlds/: classroom.sdf  wider_classroom.sdf
src/fusion_odom_imu/: CMakeLists.txt  package.xml
src/fusion_odom_imu/config/: ekf_node.yaml
src/fusion_odom_imu/launch/: ekf.launch.py
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: amcl.yaml  mapper_params.yaml  navigation.yaml
src/navigation/launch/: navigation_bringup.launch.py  slam_with_map_save.launch.py
src/navigation/maps/: classroom_map.pgm  classroom_map.yaml  wider_classroom_map.pgm  wider_classroom_map.yaml
src/robot_gui_bridge/: CMakeLists.txt  package.xml
src/robot_gui_bridge/gui/: navigation.html  navigation_stamped_vel.html
src/robot_gui_bridge/launch/: websocket.launch.py
