<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyber_robot</name>
  <version>1.0.0</version>
  <description>URDF and simulation package for Cyber Robot. Contains robot description, urdf/xacro
    models, meshes, textures, launch files, and Gazebo worlds.</description>

  <maintainer email="ayaaashraffarag.200166@gmail.com">Ayaa Ashraf</maintainer>
  <license>Apache-2.0</license>
  <author email="ayaaashraffarag.200166@gmail.com">Ayaa Ashraf</author>

  <!-- Build tool for ROS2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <!-- Runtime/Exec dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>