<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion_odom_imu</name>
  <version>1.0.0</version>
  <description>Sensor fusion package for odometry and IMU data integration using Extended Kalman
    Filter (EKF). Fuses odometry from wheels with IMU measurements for improved localization.</description>
  <maintainer email="ayaaashraffarag.200166@gmail.com">Ayaa Ashraf</maintainer>
  <license>Apache-2.0</license>
  <author email="ayaaashraffarag.200166@gmail.com">Ayaa Ashraf</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>