<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation</name>
  <version>1.0.0</version>
  <description>Navigation and autonomous path planning for Cyber Robot using Nav2. Provides
    localization (AMCL), mapping, and path planning capabilities.</description>
  <maintainer email="ayaaashraffarag.200166@gmail.com">Ayaa Ashraf</maintainer>
  <license>Apache-2.0</license>
  <author email="ayaaashraffarag.200166@gmail.com">Ayaa Ashraf</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>nav2_bringup</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>